Address contrast accessibility issue

--- a/src/sass/base/_va.scss
+++ b/src/sass/base/_va.scss
@@ -1215,7 +1215,7 @@ a.twitter {
 
   // Works with <= IE8
   &:last-child {
-    opacity: .5;
+    opacity: 0.6;
     padding-left: 1em;
 
     &:hover {
